WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256020
[IFC][Partial layout] Incorrect damage line index may cause double inline items
https://bugs.webkit.org/show_bug.cgi?id=256020
Summary
[IFC][Partial layout] Incorrect damage line index may cause double inline items
alan
Reported
2023-04-26 19:07:07 PDT
<
rdar://108558653
>
Attachments
Patch
(5.22 KB, patch)
2023-04-26 19:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.37 KB, patch)
2023-04-27 06:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-04-26 19:23:10 PDT
Created
attachment 466112
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2023-04-27 00:18:18 PDT
Comment on
attachment 466112
[details]
Patch Set “r?” on patch.
alan
Comment 3
2023-04-27 06:54:46 PDT
Created
attachment 466115
[details]
[fast-cq]Patch
EWS
Comment 4
2023-04-27 08:43:48 PDT
Committed
263455@main
(44b5f74e5acc): <
https://commits.webkit.org/263455@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466115
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug